cluster/ingestion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion
  namespace: athena
spec:
  selector:
    app: ingestion
  ports:
    - name: http
      port: 80
      targetPort: 8000
