cluster/ingestion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion
  namespace: athena
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: ingest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingestion
                port:
                  number: 80
